--- a/ofodio/ofodio/settings.py.sample
+++ b/ofodio/ofodio/settings.py.sample
@@ -20,7 +20,7 @@ BASE_DIR = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
 # See https://docs.djangoproject.com/en/3.0/howto/deployment/checklist/
 
 # SECURITY WARNING: keep the secret key used in production secret!
-SECRET_KEY = '%i_quc7!g)r9%^h)o$_8wr+u7&_%oz%7#%!wvuq5p28o*@(6#o'
+SECRET_KEY = 'GENERATE A RANDOM SECRET KEY AND REPLACE IT WITH THIS'
 
 # SECURITY WARNING: don't run with debug turned on in production!
 DEBUG = True
